# matrix-frb

./: .gitignore  CREATE_ROOM_FEATURE.md  CURRENT_STATUS_AND_SOLUTIONS.md  IMPLEMENTATION_SUMMARY.md  MATRIX_SDK_INTEGRATION.md  README.md  RUST_LOGGING_SOLUTION.md  SYNC_IMPLEMENTATION_SUMMARY.md  docker-compose-simple.yml  docker-compose.yml  docker-compose.yml.backup  flutter_rust_bridge.yaml  pubspec.yaml  setup_matrix_server.sh  setup_simple_matrix.sh  update_synapse_config.py
.kiro/steering/: conventions.md  product.md  structure.md  tech.md
android/: KEYSTORE_README.md  keystore.properties
android/app/: build.gradle.kts  proguard-rules.pro
integration_test/: accessibility_test.dart  app_test.dart  performance_test.dart  simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: chat_listing.dart  create_room_screen.dart  enhanced_matrix_example.dart  home_screen.dart  logging_service.dart  login_screen.dart  matrix_sync_service.dart  splash_screen.dart  timeline_screen.dart  working_matrix_example.dart
lib/src/core/: logging_service.dart
lib/src/core/navigation/: navigator_service.dart
lib/src/core/screens/: error_screen.dart
lib/src/core/state_management/: base_state_widget_model.dart
lib/src/extensions/: context_extension.dart
lib/src/features/create_chat/: create_room_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  logging_handler.dart  logging_service.dart
lib/src/rust/api/: init.dart  logger.dart  matrix_client.dart  matrix_message.dart  matrix_room.dart  platform.dart  platform.freezed.dart  simple.dart  tracing.dart
lib/src/rust/matrix/: authentication.dart  client.dart  rooms.dart  sync_service.dart  timelines.dart  user_serach.dart
lib/src/theme/: matrix_theme.dart  theme_provider.dart  theme_switcher.dart
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  matrix_client.rs  matrix_message.rs  matrix_room.rs
rust/src/api/: init.rs  logger.rs  matrix_client.rs  matrix_message.rs  matrix_room.rs  mod.rs  platform.rs  simple.rs  tracing.rs
rust/src/matrix/: authentication.rs  client.rs  mod.rs  rooms.rs  status.rs  sync_service.rs  timelines.rs  user_serach.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_matrix.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_matrix.podspec
rust_builder/windows/: CMakeLists.txt
synapse/: homeserver.yaml  localhost.signing.key
test/: create_room_screen_test.dart
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+29 files in other folders)
