[package]
name = "rust_lib_matrix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
# matrix-sdk = { path = "matrix-rust-sdk/crates/matrix-sdk", version = "0.13.0" }
# matrix-sdk-sqlite = { path = "matrix-rust-sdk/crates/matrix-sdk-sqlite", version = "0.13.0", features = ["bundled"] }
# matrix-sdk-ui = { path = "matrix-rust-sdk/crates/matrix-sdk-ui", version = "0.13.0" }
# matrix-sdk-ffi = { path = "matrix-rust-sdk/bindings/matrix-sdk-ffi" , version = "0.13.0" }
# matrix-sdk-common = { path = "matrix-rust-sdk/crates/matrix-sdk-common", version = "0.13.0" }

matrix-sdk = { version = "0.13.0" }
matrix-sdk-sqlite = { version = "0.13.0", features = ["bundled"] }
matrix-sdk-ui = { version = "0.13.0" }
# matrix-sdk-ffi = { version = "0.13.0" }
matrix-sdk-common = { version = "0.13.0" }

tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
# tracing-subscriber = "0.3.18"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false }
serde_json = "1.0"
anyhow = "1.0"
url = "2.0"
once_cell = "1.0"
futures = "0.3"
log = "0.4"
# tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2.2" }
log-panics = { version = "2", features = ["with-backtrace"] }
paranoid-android = "0.2.1"
sentry = { version = "0.36.0", optional = true, default-features = false, features = [
  # Most default features enabled otherwise.
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "sentry-debug-images",
] }
sentry-tracing = { version = "0.36.0", optional = true }

mime = "0.3.17"
futures-util = "0.3.31"
extension-trait = "1.0.2"
syn = "2.0.104"
quote = "1.0.40"
proc-macro2 = "1.0.95"
openssl = { version = "*", features = ["vendored"] }

# Android-specific configuration
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
